# motion-gen-survey

./: .gitattributes  .gitignore  .gitmodules  CLAUDE.md  DEV_GUIDE.md  README.md  pixi.toml  pyproject.toml  test_syntax.py
.github/: copilot-instructions.md
.promptx/: .xml-upgrade-backup-done  pouch.json
.promptx/backup/backup_1756784778613/: backup-meta.json
.promptx/memory/ml-tester/: declarative.dpml
.promptx/resource/: project.registry.json
.promptx/resource/role/ml-tester/: ml-tester.role.md
.promptx/resource/role/ml-tester/execution/: ml-model-evaluation.execution.md
.promptx/resource/role/ml-tester/thought/: ml-research-mindset.thought.md
.serena/: project.yml
.serena/memories/: pending_export_guide_note.md  project_overview_minimal.md  suggested_commands.md  task_completion_guidelines.md
context/: README.md
context/design/: README.md  project-info.md  survey-taxonomy-design.md
context/hints/: README.md  howto-pixi-pypi-dependencies.md  howto-pyvista-incremental-animation.md  howto-pyvista-pointset-animation.md  howto-setup-survey-project.md
context/instructions/: README.md
context/logs/: README.md
context/logs/code-reivew/: 20250903-000000-show-animation-smplx.md
context/plans/: README.md  survey-implementation-roadmap.md
context/refcode/: README.md
context/roles/implementation-specialist/: README.md
context/roles/motion-expert/: README.md  system-prompt.md
context/roles/research-analyst/: README.md  system-prompt.md
context/roles/survey-curator/: README.md
context/summaries/: README.md  project-overview.md
context/tasks/: README.md  task-anything.md
context/tasks/features/: README.md
context/tasks/features/run-flowmdm/: README.md  about-flowmdm-text-to-motion-generation.md  howto-download-flowmdm-models.md  howto-evaluate-and-run-flowmdm.md
context/tasks/fixes/: README.md
context/tasks/refactor/: README.md
context/tasks/tests/: README.md
context/tools/: README.md
data/smplx/: README.md
model_zoo/: README.md
scripts/: README.md  check-flowmdm-result.py  export_smplx_obj.py
tests/: __init__.py  check-flowmdm-result-animation.py  check-flowmdm-result-single-frame.py  test_flowmdm_visualization.py
